# client_side_validation

./: .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  MANIFEST.yml  README.md  codecov.yml  flake.nix  license_header
.github/: dependabot.yml
.github/workflows/: build.yml  codecov.yml  lint.yml  pre-publish.yml  publication.yml  test.yml
commit_verify/: Cargo.toml  README.md
commit_verify.old/src/: commit_verify.rs  lib.rs  merkle.rs  tagged_hash.rs
commit_verify/derive/: Cargo.toml  README.md
commit_verify/derive/src/: derive.rs  lib.rs  params.rs
commit_verify/derive/tests/: base.rs  dumb.rs  type.rs
commit_verify/derive/tests/common/: mod.rs
commit_verify/doc/: MPC.drawio  Workflows.drawio
commit_verify/src/: api.rs  commit.rs  commit_encode.rs  commit_verify.rs  conceal.rs  convolve.rs  convolve_commit.rs  digest.rs  digests.rs  embed.rs  embed_commit.rs  encode.rs  id.rs  lib.rs  lnpbp4.old.rs  lnpbp4.rs  merkle.rs  multi_commit.rs  slice32.rs  stl.rs  tagged_hash.rs  vesper.rs
commit_verify/src/mpc/: atoms.rs  block.rs  mod.rs  test.rs  tree.rs
confined_encoding/: Cargo.toml  README.md
confined_encoding/derive/: Cargo.toml  README.md
confined_encoding/derive/src/: lib.rs
confined_encoding/derive/tests/: basics.rs  enums.rs  structs.rs  tlv.rs
confined_encoding/derive/tests/basics-failures/no_empty_types/: main.rs
confined_encoding/derive/tests/basics-failures/no_networking_units/: mod.rs
confined_encoding/derive/tests/basics-failures/no_strict_unions/: mod.rs
confined_encoding/derive/tests/basics-failures/no_unit_types/: main.rs
confined_encoding/derive/tests/basics-failures/strict_network_exclusivity/: mod.rs
confined_encoding/derive/tests/common/: mod.rs
confined_encoding/derive/tests/tlv-failures/no_enums/: mod.rs
confined_encoding/derive/tests/tlv-failures/no_strict/: mod.rs
confined_encoding/derive/tests/tlv-failures/no_unions/: mod.rs
confined_encoding/derive/tests/tlv-failures/tlv_non_u16_type/: mod.rs
confined_encoding/derive/tests/tlv-failures/tlv_undeclared/: mod.rs
confined_encoding/derive_helpers/src/: decode.rs  encode.rs  lib.rs  param.rs
confined_encoding/derive_helpers/tests/: derive.rs
confined_encoding/src/: amplify_types.rs  bitcoin.rs  bulletproofs.rs  check.rs  collections.rs  crypto.rs  lib.rs  macros.rs  miniscript.rs  monero.rs  net.rs  path.rs  pointers.rs  primitives.rs  read.rs  schema.rs  slice32.rs  strategies.rs  write.rs
confined_encoding/src/encodings/: amplify_types.rs  bitcoin.rs  bulletproofs.rs  collections.rs  mod.rs  primitives.rs
confined_encoding/test_helpers/: Cargo.toml
confined_encoding/test_helpers/src/: lib.rs
scripts/: typelib.sh
single_use_seals/: Cargo.toml  README.md
single_use_seals/src/: lib.rs
src/: api.rs  lib.rs  trust_resolvers.rs  validate.rs
stl/: CommitVerify.asc.stl  CommitVerify.stl  CommitVerify.sty  CommitVerify@0.1.0.sta  CommitVerify@0.1.0.stl  CommitVerify@0.1.0.sty  Merkle.vesper
strict_encoding/: Cargo.toml  README.md
strict_encoding/derive/: Cargo.toml  README.md
strict_encoding/derive/examples/: test.rs  tlv.rs
strict_encoding/derive/src/: decode.rs  encode.rs  lib.rs  param.rs
strict_encoding/derive/tests/: basics.rs  enums.rs  simple.rs  structs.rs  tlv.rs
strict_encoding/derive/tests/basics-failures/no_empty_types/: main.rs
strict_encoding/derive/tests/basics-failures/no_networking_units/: mod.rs
strict_encoding/derive/tests/basics-failures/no_strict_unions/: mod.rs
strict_encoding/derive/tests/basics-failures/no_unit_types/: main.rs
strict_encoding/derive/tests/basics-failures/strict_network_exclusivity/: mod.rs
strict_encoding/derive/tests/common/: mod.rs
strict_encoding/derive/tests/tlv-failures/no_enums/: mod.rs
strict_encoding/derive/tests/tlv-failures/no_strict/: mod.rs
strict_encoding/derive/tests/tlv-failures/no_unions/: mod.rs
strict_encoding/derive/tests/tlv-failures/tlv_non_u16_type/: mod.rs
strict_encoding/derive/tests/tlv-failures/tlv_undeclared/: mod.rs
strict_encoding/derive_helpers/: Cargo.toml
strict_encoding/derive_helpers/src/: decode.rs  encode.rs  lib.rs  param.rs
strict_encoding/derive_helpers/tests/: derive.rs
strict_encoding/src/: amplify_types.rs  bitcoin.rs  bitcoin_hashes.rs  byte_str.rs  collections.rs  crypto.rs  lib.rs  macros.rs  miniscript.rs  monero.rs  net.rs  pointers.rs  primitives.rs  slice32.rs  strategies.rs  test_helpers.rs
strict_encoding/test/: Cargo.toml
strict_encoding/test_helpers/: Cargo.toml
strict_encoding/test_helpers/src/: lib.rs
test/: depCargo.toml
