[package]
name = "commit_verify"
version = "0.10.6"
description = "Commit-verify API for client-side validation"
keywords = ["lnp-bp", "smart-contracts", "blockchain", "commitments"]
categories = ["cryptography"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
exclude = ["derive"]

[lib]
name = "commit_verify"
path = "src/lib.rs"

[[bin]]
name = "commit-stl"
required-features = ["stl"]

[dependencies]
amplify = { version = "4.5.0", features = ["hex", "apfloat"] }
commit_encoding_derive = { version = "0.10.0", path = "derive" }
strict_encoding = "2.6.1"
strict_types = { version = "1.6.3", optional = true }
sha2 = "0.10.8"
ripemd = "0.1.3"
rand = { version = "0.8.5", optional = true }
serde_crate = { version = "1.0", package = "serde", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["derive"]
all = ["rand", "serde", "stl", "derive"]
serde = ["serde_crate", "amplify/serde"]
stl = ["strict_types", "strict_types/base64"]
derive = []

[package.metadata.docs.rs]
features = [ "all" ]
