[package]
name = "commit_verify"
version = { workspace = true }
description = "Commit-verify API for client-side validation"
keywords = ["lnp-bp", "smart-contracts", "blockchain", "commitments"]
categories = ["cryptography"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
exclude = ["derive"]

[lib]
name = "commit_verify"
path = "src/lib.rs"

[[bin]]
name = "commit-stl"
required-features = ["stl"]

[dependencies]
amplify = { workspace = true, features = ["hex", "apfloat"] }
strict_encoding = { workspace = true }
strict_types = { workspace = true }
commit_encoding_derive = { version = "0.11.0-beta.3", path = "derive" }
sha2 = "0.10.8"
ripemd = "0.1.3"
rand = { version = "0.8.5", optional = true }
serde_crate = { version = "1.0", package = "serde", optional = true }

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["derive"]
all = ["rand", "serde", "stl", "derive"]
serde = ["serde_crate", "amplify/serde"]
stl = ["strict_types/base85"]
derive = []

[package.metadata.docs.rs]
features = [ "all" ]
