[package]
name = "commit_verify"
version = { workspace = true }
description = "Commit-verify API for client-side validation"
keywords = ["lnp-bp", "smart-contracts", "blockchain", "commitments"]
categories = ["cryptography"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
exclude = ["derive"]

[lib]
name = "commit_verify"
path = "src/lib.rs"

[[bin]]
name = "commit-stl"
required-features = ["stl", "vesper"]

[dependencies]
amplify = { workspace = true }
strict_encoding = { workspace = true }
strict_types = { workspace = true }
vesper-lang = "0.2.1"
commit_encoding_derive = { version = "0.12.0-rc.1", path = "derive" }
sha2 = "0.10.8"
ripemd = "0.1.3"
rand = { version = "0.9.1", optional = true }
serde = { version = "1.0", package = "serde", optional = true }

[dev-dependencies]
rand = "0.9.1"

[features]
default = ["derive"]
all = ["rand", "derive", "stl", "vesper", "serde"]
derive = []
rand = ["dep:rand"]
stl = ["strict_types/armor"]
vesper = []
serde = ["dep:serde", "amplify/serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
