[package]
name = "confined_encoding"
version = "0.9.0-alpha.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Strict encoding: deterministic binary serialization for networking & client-side validation"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "confined-encoding", "consensus", "bitcoin", "rgb"]
categories = ["encoding", "parsing"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"
exclude = ["derive"]

[lib]
name = "confined_encoding"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3.13.0", features = ["proc_attr"] }
confined_encoding_derive = { version = "0.8.0", path = "./derive", optional = true }
bitcoin_hashes = "0.11.0" # We need this separately since bitcoin is an optional dependency
bitcoin = { version = "0.29.2", optional = true }
grin_secp256k1zkp = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }
half = { version = "2.1", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.7" # We can't use more recent version due to ed25519-dalek limitations
amplify = { version = "3.13.0", features = ["proc_attr", "hex"] }
confined_encoding_test = { version = "0.9.0-alpha.1", path = "./test_helpers" }

[features]
default = ["chrono", "derive", "bitcoin"]
all = ["float", "crypto", "chrono", "derive", "bitcoin", "serde"]
crypto = ["grin_secp256k1zkp", "bitcoin"]
derive = ["confined_encoding_derive"]
float = ["amplify/apfloat", "half"]

[package.metadata.docs.rs]
features = [ "all" ]
