[package]
name = "confined_encoding"
version = "0.9.0-alpha.4"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Confined encoding: deterministic binary serialization for client-side validation"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "confined-encoding", "consensus", "bitcoin", "rgb"]
categories = ["encoding", "parsing"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"
exclude = ["derive"]

[lib]
name = "confined_encoding"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "4.0.0-beta.1", features = ["proc_attr", "apfloat"] }
confined_encoding_derive = { version = "0.9.0-alpha.1", path = "./derive", optional = true }
bitcoin = "0.29.2"
lnpbp_secp256k1zkp = { version = "0.9.0-alpha.1", optional = true }
half = "2.1.0"

[dev-dependencies]
rand = "0.7" # We can't use more recent version due to ed25519-dalek limitations
amplify = { version = "4.0.0-alpha.3", features = ["proc_attr", "hex"] }
confined_encoding_test = { path = "./test_helpers" }
lnpbp_secp256k1zkp = { version = "0.9.0-alpha.1", features = ["rand"] }

[features]
default = ["derive"]
all = ["derive", "bulletproofs"]
bulletproofs = ["lnpbp_secp256k1zkp"]
derive = ["confined_encoding_derive"]

[package.metadata.docs.rs]
features = [ "all" ]
