[package]
name = "single_use_seals"
version = { workspace = true }
description = "Single-use-seals foundation API"
keywords = ["lnp-bp", "smart-contracts", "blockchain", "single-use-seals"]
categories = ["cryptography"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[lib]
name = "single_use_seals"
path = "src/lib.rs"

[dependencies]
strict_encoding = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
all = ["strict_encoding", "serde"]

[package.metadata.docs.rs]
features = ["all"]
