[package]
name = "single_use_seals"
version = { workspace = true }
description = "Single-use-seals foundation API"
keywords = ["lnp-bp", "smart-contracts", "blockchain", "single-use-seals"]
categories = ["cryptography"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[lib]
name = "single_use_seals"
path = "src/lib.rs"

[dependencies]
amplify_derive = "~4.0.1"
async-trait = { version = "0.1.81", optional = true }

[features]
default = []
all = ["async"]
async = ["async-trait"]

[package.metadata.docs.rs]
features = ["all"]
