[package]
name = "strict_encoding"
version = "1.8.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Strict encoding: deterministic binary serialization for networking & client-side validation"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "strict-encoding", "networking", "bitcoin", "internet2"]
categories = ["encoding", "parsing"]
readme = "README.md"
edition = "2018"
exclude = ["derive"]

[lib]
name = "strict_encoding"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3.12.0", features = ["proc_attr"] }
strict_encoding_derive = { version = "1.5.4", path = "./derive", optional = true }
bitcoin_hashes = "0.10" # We need this separately since bitcoin is an optional dependency
bitcoin = { version = "0.28.0", optional = true }
miniscript = { version = "7.0.0", optional = true }
ed25519-dalek = { version = "1", optional = true }
grin_secp256k1zkp = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.7"
amplify = { version = "3.12.0", features = ["proc_attr", "hex"] }
strict_encoding_test = { version = "1.8.0-rc.1", path = "./test_helpers" }

[features]
default = ["chrono", "derive", "bitcoin"]
all = ["miniscript", "crypto", "chrono", "derive", "bitcoin"]
crypto = ["ed25519-dalek", "grin_secp256k1zkp", "bitcoin"]
derive = ["strict_encoding_derive"]

[package.metadata.docs.rs]
features = [ "all" ]
