[package]
name = "strict_encoding"
version = "0.9.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Strict encoding: deterministic binary serialization for networking & client-side validation"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "strict-encoding", "networking", "bitcoin", "internet2"]
categories = ["encoding", "parsing"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"
exclude = ["derive"]

[lib]
name = "strict_encoding"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = { version = "3.13.0", features = ["proc_attr"] }
strict_encoding_derive = { version = "0.9.0", path = "./derive", optional = true }
bitcoin_hashes = "0.11.0" # We need this separately since bitcoin is an optional dependency
bitcoin = { version = "0.29.1", optional = true }
miniscript = { version = "8.0.0", optional = true }
ed25519-dalek = { version = "1.0", optional = true }
grin_secp256k1zkp = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }
half = { version = "2.1", optional = true }
serde = { version = "1.0", optional = true }
monero = { version = "0.18", optional = true }

[dev-dependencies]
rand = "0.7"
amplify = { version = "3.13.0", features = ["proc_attr", "hex"] }
strict_encoding_test = { version = "0.9.0", path = "./test_helpers" }

[features]
default = ["chrono", "derive", "bitcoin"]
all = ["float", "miniscript", "crypto", "chrono", "derive", "bitcoin", "serde", "monero"]
crypto = ["ed25519-dalek", "grin_secp256k1zkp", "bitcoin"]
derive = ["strict_encoding_derive"]
float = ["amplify/apfloat", "half"]

[package.metadata.docs.rs]
features = [ "all" ]
