[package]
name = "commit_encoding_derive"
version = "0.10.0-beta.1"
description = "Commitment encoding derivation macros"
keywords = ["commitments", "proc-macro"]
categories = ["development-tools", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
amplify_syn = "2.0.0"
heck = "0.4.0"

[dev-dependencies]
commit_verify = { path = ".." }
amplify = "4.0.0"
compiletest_rs = "0.9.0"
