[package]
name = "commit_encoding_derive"
version = "0.10.0"
description = "Commitment encoding derivation macros"
keywords = ["commitments", "proc-macro"]
categories = ["development-tools", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
amplify = "4.0.0"
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
amplify_syn = "2.0.0"

[dev-dependencies]
commit_verify = { path = ".." }
compiletest_rs = "0.9.0"
strict_encoding = "2.1.1"
