[package]
name = "encoding_derive_helpers"
version = "1.5.3"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Helper functions for creating different encoding derivation macros"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "strict-encoding", "networking", "internet2", "proc-macro"]
categories = ["encoding", "parsing"]
readme = "../README.md"
edition = "2018"

[lib]

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"
amplify = { version = "3.7.1", features = [ "proc_attr" ] }
