[package]
name = "encoding_derive_helpers"
version = "0.8.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Helper functions for creating different encoding derivation macros"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "strict-encoding", "networking", "internet2", "proc-macro"]
categories = ["encoding", "parsing"]
readme = "../README.md"
edition = "2021"
rust-version = "1.59.0"

[lib]

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = "1"
amplify = { version = "3.13.0", features = [ "proc_attr" ] }
