[package]
name = "strict_encoding_test"
version = "0.8.0"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Helper functions for testing strict encodings"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "strict-encoding", "networking"]
categories = ["encoding", "parsing"]
readme = "../README.md"
edition = "2018"

[lib]

[dependencies]
amplify = "3.9.1"
strict_encoding = { version = "0.8.0", path = ".." }
