[package]
name = "strict_encoding_test"
version = "0.9.0-rc.1"
license = "Apache-2.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Helper functions for testing strict encodings"
repository = "https://github.com/LNP-BP/client_side_validation"
homepage = "https://github.com/LNP-BP"
keywords = ["lnp-bp", "strict-encoding", "networking"]
categories = ["encoding", "parsing"]
readme = "../README.md"
edition = "2021"
rust-version = "1.59.0"

[lib]

[dependencies]
amplify = "3.13.0"
strict_encoding = { version = "0.9.0-rc.1", path = ".." }
